layout shift fix

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -266,3 +266,12 @@ p {
   column-gap: 50px;
   row-gap: 44px;
 }
+
+// .tabs-container .subtab-item {
+//   pointer-events: none;
+// }
+
+.right-down {
+  // border: 5px solid red;
+  width: 850px;
+}
